--- a/.editorconfig
+++ b/.editorconfig
@@ -7,5 +7,5 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.{rb,coffee,css}]
+[*.{rb,erb,coffee,js,css,md}]
 indent_size = 2
